# swarm-contract-simulator

./: CMakeLists.txt
include/: logger.hpp  macros.hpp  result.hpp  singleton.hpp
src/: main.cpp
